third_party/blink/web_tests/external/wpt/wasm/jsapi/idlharness.any-expected.txt
This is a testharness.js-based test.
FAIL wasm-js-api interfaces. promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1:
,Worker)] interface ArrayBuffer {};
                    ^ Missing name in interface"
Harness: the test ran to completion.

